<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map_location">Map location</string>
    <string name="action_refresh" >Refresh</string>
    <string name="action_share" >Share</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_settings_activity">Settings Activity</string>


    <string name="pref_location_ID">prefLocationText</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" >Location</string>
    <string name="pref_location_default">94043</string>

    <string name="pref_temperature_label">Temperature</string>
    <string name="pref_temperature_key">temperature</string>
    <string name="pref_temperature_default">metric</string>
    <string name="pref_temperature_metric">metric</string>
    <string name="pref_temperature_imperial">Imperial</string>


    <string name="pref_notification_ID_">prefNotificationText</string>
    <string name="pref_notification_label">Enable Notifications</string>
    <string name="pref_notification_key" >notification</string>
    <string name="pref_notification_default">true</string>
    <string name="pref_notification_summary_notify_yes">Yes</string>
    <string name="pref_notification_summary_notify_no">No</string>


    <string name="pref_locationstatus_ID_">prefNotificationText</string>
    <string name="pref_locationstatus_label">Enable Notifications</string>
    <string name="pref_locationstatus_key" >locationstatus</string>
    <string name="pref_locationstatus_default">3</string>


    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <string name="humidity">Humidity :</string>
    <string name="wind">Wind :</string>
    <string name="pressure">Pressure :</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <string name="noWeatherInformation">No Weather Information</string>

    <!-- Empty Weather Database -->
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. Invalid location.</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>


</resources>
