<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        >
    </EditTextPreference>

    <ListPreference
        android:title="@string/pref_temperature_label"
        android:key="@string/pref_temperature_key"
        android:entries="@array/pref_tempertaure_listentries"
        android:entryValues="@array/pref_tempertaure_listvalues"
        >

    </ListPreference>

    <CheckBoxPreference
        android:title="@string/pref_notification_label"
        android:key="@string/pref_notification_key"
        android:defaultValue="true"

        >

    </CheckBoxPreference>




</PreferenceScreen>